--- a/app/templates/email/activate.twig
+++ b/app/templates/email/activate.twig
@@ -7,7 +7,7 @@
 {% block body %}
 <p>{% trans %}You requested your email address to be changed to {{email}}.{% endtrans %}</p>
 
-<p>{% trans %}In order to fully use your account you need to activate this new email address.{% endtrans %}<br>
+<p>{% trans %}To use all features of {{brand}} you need to activate this new address.{% endtrans %}<br>
 {% trans %}Please open {{url}} to activate your address.{% endtrans %}</p>
 
 {% endblock %}
