--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -52,8 +52,7 @@
 							<div class="form-group">
 								<label for="identifier">{%trans "Identifier" %}</label>
 								<input type="text" class="form-control" name="identifier" id="identifier" value="{{identifier}}" placeholder="{{identifier_proposal}}">
-								<span class="help-block">{% trans %}Will be used in download url, ideally your filename.<br>
-									Examples: moderncombat, hazard, metalmagic.{% endtrans %}</span>
+								<span class="help-block">{% trans %}Will be used in download url, ideally your filename.<br>Examples: moderncombat, hazard, metalmagic.{% endtrans %}</span>
 							</div>
 							<div class="form-group">
 								<label for="title">{%trans "Abbreviation" %}</label>
