--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -3,8 +3,8 @@
 {% set scripts = ['/resumable/resumable.js', '/lorry/js/lorry-image-upload.js', '/lorry/js/lorry-release-upload.js'] %}
 
 {% block content %}
-	<div class="container">
-		<div class="page-header">
+	<div class="page-header">
+		<div class="container">
 			<h1>
 				<a href="{{base}}/publish/{{addonid}}#releases">
 					{{addontitle}}
@@ -25,6 +25,8 @@
 				</small>
 			</h1>
 		</div>
+	</div>
+	<div class="container">
 		<noscript>
 		<div class="alert alert-danger">{% trans %}Javascript needs to be enabled in order to edit addons and releases.{% endtrans %}</div>
 		</noscript>
