require confirmation before removing login service

--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -168,4 +168,8 @@
 
 	$('#remote-logout-prompt').show();
 	$('#remote-logout-confirm').removeClass('in');
+
+	$('.remove-oauth-confirm').click(function() {
+		return confirm(translation.sureRemoveOauth);
+	});
 {% endblock %}
